Update and rename 1d.html to 333.html

--- a/333.html
+++ b/333.html
@@ -816,6 +816,7 @@ div#resultContainer {
 <!--<script src="https://code.907000.xyz/fanweizhuang.js"></script>-->
 
 <script>
+// 第一段JS
 window.addEventListener("DOMContentLoaded", () => {
   const statusText = document.getElementById("statusText");
   const finalResult = document.getElementById("finalResult");
@@ -921,6 +922,7 @@ window.addEventListener("DOMContentLoaded", () => {
       return "Unknown";
     }
   }
+
   function showResultHTML(items, score) {
     const container = document.createElement("div");
     container.style.margin = "auto";
@@ -936,16 +938,7 @@ window.addEventListener("DOMContentLoaded", () => {
     const table = document.createElement("table");
     table.style.width = "100%";
     table.style.borderCollapse = "collapse";
-
-    items.forEach(([label, status, color]) => {
-      const row = document.createElement("tr");
-
-      const left = document.createElement("td");
-      left.textContent = label;
-      left.style.padding = "8px";
-      left.style.borderBottom = "1px solid #2c3b51";
-      left.style.fontWeight = "bold";
-
+// 第二段JS
       const right = document.createElement("td");
       right.textContent = status;
       right.style.padding = "8px";
@@ -976,52 +969,47 @@ window.addEventListener("DOMContentLoaded", () => {
     resultContainer.appendChild(container);
   }
 
-async function detectWebRTCIP() {
-  if (typeof RTCPeerConnection === "undefined") {
-    return null; // WebRTC 被禁用，跳过检测
+  async function detectWebRTCIP() {
+    if (typeof RTCPeerConnection === "undefined") return null;
+
+    return new Promise(resolve => {
+      let resolved = false;
+      const candidates = new Set();
+      const rtc = new RTCPeerConnection({ iceServers: CONFIG.stunServers });
+
+      rtc.createDataChannel("dummy");
+      rtc.createOffer().then(offer => rtc.setLocalDescription(offer));
+
+      const timeout = setTimeout(() => {
+        if (!resolved) {
+          resolved = true;
+          resolve(null);
+        }
+      }, CONFIG.webrtcTimeout);
+
+      rtc.onicecandidate = event => {
+        if (!event.candidate || resolved) return;
+        const ipMatch = /([0-9]{1,3}(\\.[0-9]{1,3}){3})/.exec(event.candidate.candidate);
+        if (ipMatch) candidates.add(ipMatch[1]);
+      };
+
+      rtc.onicegatheringstatechange = () => {
+        if (rtc.iceGatheringState === "complete" && !resolved) {
+          resolved = true;
+          clearTimeout(timeout);
+          const valid = [...candidates].filter(ip =>
+            ip &&
+            !ip.startsWith("192.") &&
+            !ip.startsWith("10.") &&
+            !ip.startsWith("172.") &&
+            !ip.startsWith("127.") &&
+            !ip.startsWith("0.")
+          );
+          resolve(valid[0] || null);
+        }
+      };
+    });
   }
-
-  return new Promise(resolve => {
-    let resolved = false;
-    const candidates = new Set();
-    const rtc = new RTCPeerConnection({ iceServers: CONFIG.stunServers });
-
-    rtc.createDataChannel("dummy");
-    rtc.createOffer().then(offer => rtc.setLocalDescription(offer));
-
-    const timeout = setTimeout(() => {
-      if (!resolved) {
-        resolved = true;
-        resolve(null);
-      }
-    }, CONFIG.webrtcTimeout);
-
-    rtc.onicecandidate = event => {
-      if (!event.candidate || resolved) return;
-      const ipMatch = /([0-9]{1,3}(\\.[0-9]{1,3}){3})/.exec(event.candidate.candidate);
-      if (ipMatch) {
-        candidates.add(ipMatch[1]);
-      }
-    };
-
-    rtc.onicegatheringstatechange = () => {
-      if (rtc.iceGatheringState === "complete" && !resolved) {
-        resolved = true;
-        clearTimeout(timeout);
-        const valid = [...candidates].filter(ip =>
-          ip &&
-          !ip.startsWith("192.") &&
-          !ip.startsWith("10.") &&
-          !ip.startsWith("172.") &&
-          !ip.startsWith("127.") &&
-          !ip.startsWith("0.")
-        );
-        resolve(valid[0] || null);
-      }
-    };
-  });
-}
-
 
   async function detectWebRTCWrapper() {
     IPStore.webrtc = await withTimeout(detectWebRTCIP(), CONFIG.webrtcTimeout);
@@ -1032,67 +1020,65 @@ async function detectWebRTCIP() {
     const ipapi = IPStore.ipapiData?.ip ?? null;
     if (!webrtc || !ipapi) return { status: "🟢 正常", color: "#00ff22" };
 
-    const mismatch =
-      webrtc !== ipapi ||
-      webrtc !== tcp;
-
+    const mismatch = webrtc !== ipapi || webrtc !== tcp;
     return mismatch
       ? { status: "🔴 检测到异常", color: "#fb0000" }
       : { status: "🟢 正常", color: "#00ff22" };
   }
 
-async function fetchIPAPIData() {
-  const workerList = [
-    "https://uncloak1.huangjie.ggff.net",
-    "https://uncloak2.huangjie.ggff.net",
-    "https://uncloak3.huangjie.ggff.net",
-	"https://api.ipapi.is"  
-  ];
+  async function fetchIPAPIData() {
+    const workerList = [
+      "https://uncloak1.huangjie.ggff.net",
+      "https://uncloak2.huangjie.ggff.net",
+      "https://uncloak3.huangjie.ggff.net"
+    ];
 
-  for (const url of workerList) {
-    try {
-      const res = await fetch(url, { cache: "no-store" });
-      const raw = await res.json();
-      if (raw?.ip) {
-        const filtered = {
-          ip: raw.ip,
-          timezone: raw.timezone ?? raw.location?.timezone,
-          country_code: raw.country_code ?? raw.location?.country_code ?? "Unknown",
-          country_name: raw.country_name ?? raw.location?.country ?? "Unknown",
-          region_name: raw.region_name ?? raw.location?.state ?? "",
-          city: raw.city ?? raw.location?.city ?? "",
-          latitude: raw.latitude ?? raw.location?.latitude ?? null,
-          longitude: raw.longitude ?? raw.location?.longitude ?? null,
-          continent: raw.continent ?? raw.location?.continent ?? "",
-          zip: raw.zip ?? raw.location?.zip ?? "",
-          is_eu_member: raw.is_eu_member ?? raw.location?.is_eu_member ?? false,
-          calling_code: raw.calling_code ?? raw.location?.calling_code ?? "",
-          currency_code: raw.currency_code ?? raw.location?.currency_code ?? "",
-          local_time: raw.local_time ?? raw.location?.local_time ?? "",
-          local_time_unix: raw.local_time_unix ?? raw.location?.local_time_unix ?? null,
-          is_dst: raw.is_dst ?? raw.location?.is_dst ?? false,
-          asn: raw.asn ?? null,
-          org: raw.org ?? "",
-          is_vpn: raw.is_vpn ?? false,
-          is_proxy: raw.is_proxy ?? false,
-          is_tor: raw.is_tor ?? false,
-          is_abuser: raw.is_abuser ?? false,
-          is_crawler: raw.is_crawler ?? false,
-          is_datacenter: raw.is_datacenter ?? false
-        };
-        IPStore.ipapiData = filtered;
-        IPStore.ipapi = filtered.ip;
-        return filtered;
+    for (const url of workerList) {
+      try {
+        const res = await fetch(url, { cache: "no-store" });
+        const raw = await res.json();
+        const ip = raw?.ip ?? raw?.query ?? null;
+        const location = raw.location ?? {};
+        if (ip) {
+          const filtered = {
+            ip,
+            timezone: raw.timezone ?? location.timezone ?? "Unknown",
+            country_code: raw.country_code ?? location.country_code ?? "Unknown",
+            country_name: raw.country_name ?? location.country ?? "Unknown",
+            region_name: raw.region_name ?? location.state ?? "",
+            city: raw.city ?? location.city ?? "",
+            latitude: raw.latitude ?? location.latitude ?? null,
+            longitude: raw.longitude ?? location.longitude ?? null,
+            continent: raw.continent ?? location.continent ?? "",
+            zip: raw.zip ?? location.zip ?? "",
+            is_eu_member: raw.is_eu_member ?? location.is_eu_member ?? false,
+            calling_code: raw.calling_code ?? location.calling_code ?? "",
+            currency_code: raw.currency_code ?? location.currency_code ?? "",
+            local_time: raw.local_time ?? location.local_time ?? "",
+            local_time_unix: raw.local_time_unix ?? location.local_time_unix ?? null,
+            is_dst: raw.is_dst ?? location.is_dst ?? false,
+            asn: raw.asn?.asn ?? raw.asn ?? null,
+            org: raw.asn?.org ?? raw.org ?? "",
+            is_vpn: raw.is_vpn ?? false,
+            is_proxy: raw.is_proxy ?? false,
+            is_tor: raw.is_tor ?? false,
+            is_abuser: raw.is_abuser ?? false,
+            is_crawler: raw.is_crawler ?? false,
+            is_datacenter: raw.is_datacenter ?? false
+          };
+          IPStore.ipapiData = filtered;
+          IPStore.ipapi = filtered.ip;
+          return filtered;
+        }
+      } catch (e) {
+        // 可选调试输出：console.warn(`Worker ${url} 请求失败`);
       }
-    } catch (e) {
-      // 可选：console.warn(`Worker ${url} 请求失败`);
+      await sleep(300);
     }
-    await sleep(300);
+
+    return null;
   }
-
-  return null;
-}
-
+// 第三段JS
   async function fetchTCPFingerprint() {
     try {
       const res = await fetch(CONFIG.tcpipAPI, { cache: "no-store" });
@@ -1161,8 +1147,7 @@ async function fetchIPAPIData() {
   async function runCDNTriangleMeasurement(visitorIP) {
     const visitorCountryCode = IPStore.ipapiData?.country_code ?? "Unknown";
     if (visitorCountryCode === "CN") {
-		// 大陆用户跳过检测
-      return "🟢 正常 ";
+      return "📡 CDN 三角测量: ✅ 已识别为大陆用户，无需测点判断";
     }
 
     const endpoints = {
@@ -1186,44 +1171,45 @@ async function fetchIPAPIData() {
       "TR": "https://tr.rwx.pp.ua"
     };
 
-  const fetchTasks = Object.entries(endpoints).map(([label, url]) =>
-    withTimeout(
-      fetch(url)
-        .then(res => res.json())
-        .then(json => ({
-          label,
-          rtt: json.rtt ?? null,
-          ip: json.ip ?? "N/A",
-          pop_code: json.pop_code ?? "Unknown"
-        }))
-        .catch(() => ({
-          label,
-          rtt: null,
-          ip: "FetchError",
-          pop_code: "FetchError"
-        })),
-      3000
-    )
-  );
+    const fetchTasks = Object.entries(endpoints).map(([label, url]) =>
+      withTimeout(
+        fetch(url)
+          .then(res => res.json())
+          .then(json => ({
+            label,
+            rtt: json.rtt ?? null,
+            ip: json.ip ?? "N/A",
+            pop_code: json.pop_code ?? "Unknown"
+          }))
+          .catch(() => ({
+            label,
+            rtt: null,
+            ip: "FetchError",
+            pop_code: "FetchError"
+          })),
+        3000
+      )
+    );
 
-  const results = await Promise.all(fetchTasks);
-  const valid = results.filter(r => r && typeof r.rtt === "number");
-  if (!valid.length) return "📡 CDN 三角测量: 检测失败 ❌";
+    const results = await Promise.all(fetchTasks);
+    const valid = results.filter(r => r && typeof r.rtt === "number");
+    if (!valid.length) return "📡 CDN 三角测量: 检测失败 ❌";
 
-  const best = valid.sort((a, b) => a.rtt - b.rtt)[0];
-  const bestIP = best?.ip ?? null;
+    const best = valid.sort((a, b) => a.rtt - b.rtt)[0];
+    const bestIP = best?.ip ?? null;
 
-  if (!bestIP || bestIP === "FetchError" || bestIP === "N/A") {
-    return `📡 CDN 三角测量: 最优入口 ${best.label}（${best.pop_code}）无法识别 IP`;
+    if (!bestIP || bestIP === "FetchError" || bestIP === "N/A") {
+      return `📡 CDN 三角测量: 最优入口 ${best.label}（${best.pop_code}）无法识别 IP`;
+    }
+
+    const bestCountryCode = await fetchCountryFromIP(bestIP);
+    const match = best.label === bestCountryCode;
+
+    return match
+      ? `📡 CDN 三角测量: ✅ 最优入口 ${best.label}（${best.pop_code}）与 IP归属 ${bestCountryCode} 一致`
+      : `📡 CDN 三角测量: ❌ 最优入口 ${best.label}（${best.pop_code}）与 IP归属 ${bestCountryCode} 不符`;
   }
-
-  const bestCountryCode = await fetchCountryFromIP(bestIP);
-  const match = best.label === bestCountryCode;
-
-  return match
-    ? `📡 CDN 三角测量: ✅ 最优入口 ${best.label}（${best.pop_code}）与 IP归属 ${bestCountryCode} 一致`
-    : `📡 CDN 三角测量: ❌ 最优入口 ${best.label}（${best.pop_code}）与 IP归属 ${bestCountryCode} 不符`;
-}
+// 第四段JS
   function calculateSpoofScore(ipapi, delayDiff, osMismatch, geoNote, cdnMismatch, webrtcMismatch) {
     let score = 0;
 
@@ -1251,94 +1237,104 @@ async function fetchIPAPIData() {
     };
   }
 
-async function runAnalysisCore() {
-  flashUpdate("⏳ 正在初始化检测，请稍候…");
-  await sleep(500);
-
-  flashUpdate("🌐 正在查询 IP 信誉数据库…");
-  const ipapi = await withTimeout(fetchIPAPIData(), 5000);
-  if (!ipapi?.ip) {
-    flashUpdate("❌ 网络连接不稳定，检测被中断");
-    return;
-  }
-  await sleep(500);
-
-  flashUpdate("📦 正在进行 TCP/IP 指纹识别…");
-  const osMismatch = await withTimeout(fetchTCPFingerprint(), 5000);
-  await sleep(500);
-
-  flashUpdate("📡 正在进行 WebRTC 泄露检测…");
-  await detectWebRTCWrapper();
-  await sleep(500);
-
-  flashUpdate("🗺️ 正在进行链路延迟测量…");
-  const pingRTT = await withTimeout(measurePingRTT(CONFIG.pingURL), 5000);
-  if (pingRTT === null) flashUpdate("⚠️ Ping 测量失败，跳过延迟分析");
-  await sleep(500);
-
-  const wsRTT = await withTimeout(measureWebSocketRTT(CONFIG.wsURL), 8000);
-  if (wsRTT === null) flashUpdate("⚠️ WebSocket 测量失败，跳过延迟分析");
-  await sleep(500);
-
-  const countryCode = ipapi?.country_code ?? "Unknown";
-  let cdnNoteRaw = "❓ 未识别";
-  let delayDiff = pingRTT && wsRTT ? Math.abs(pingRTT - wsRTT) : null;
-  let geoNote = "❓ 未识别";
-
-  if (countryCode === "CN") {
-    geoNote = "🟢 正常";
-    delayDiff = null;
-    cdnNoteRaw = "📡 CDN 三角测量: ✅ 已识别为大陆用户，无需测点判断";
-  } else {
-    flashUpdate("📡 正在进行 POP 最优入口检测…");
-    cdnNoteRaw = await withTimeout(runCDNTriangleMeasurement(ipapi.ip), 15000);
+  async function runAnalysisCore() {
+    flashUpdate("⏳ 正在初始化检测，请稍候…");
     await sleep(500);
-  }
 
-  const ref = GEO_BASELINE?.[countryCode]?.[CONFIG.vpsRegion];
-  if (countryCode !== "CN") {
-    if (!ref) {
-      geoNote = `❓ 未识别（无 ${countryCode} → ${CONFIG.vpsRegion} 样本）`;
-    } else if (typeof pingRTT !== "number" || typeof wsRTT !== "number") {
-      geoNote = "❓ 未识别（链路测量失败）";
-    } else {
-      const { expectedRTT, tolerance } = ref;
-      const httpExceeds = pingRTT > expectedRTT + tolerance;
-      const wsExceeds = wsRTT > expectedRTT + tolerance;
-      geoNote = (httpExceeds || wsExceeds) ? "异常 ❌" : "正常 ✅";
+    flashUpdate("🌐 正在查询 IP 信誉数据库…");
+    const ipapi = await withTimeout(fetchIPAPIData(), 5000);
+    if (!ipapi?.ip) {
+      flashUpdate("❌ 网络连接不稳定，检测被中断");
+      return;
     }
+    await sleep(500);
+
+    flashUpdate("📦 正在进行 TCP/IP 指纹识别…");
+    const osMismatch = await withTimeout(fetchTCPFingerprint(), 5000);
+    await sleep(500);
+
+    flashUpdate("📡 正在进行 WebRTC 泄露检测…");
+    await detectWebRTCWrapper();
+    await sleep(500);
+
+    flashUpdate("🗺️ 正在进行链路延迟测量…");
+    const pingRTT = await withTimeout(measurePingRTT(CONFIG.pingURL), 5000);
+    if (pingRTT === null) flashUpdate("⚠️ Ping 测量失败，跳过延迟分析");
+    await sleep(500);
+
+    const wsRTT = await withTimeout(measureWebSocketRTT(CONFIG.wsURL), 8000);
+    if (wsRTT === null) flashUpdate("⚠️ WebSocket 测量失败，跳过延迟分析");
+    await sleep(500);
+
+    const countryCode = ipapi?.country_code ?? "Unknown";
+    let cdnNoteRaw = "❓ 未识别";
+    let delayDiff = pingRTT && wsRTT ? Math.abs(pingRTT - wsRTT) : null;
+    let geoNote = "❓ 未识别";
+
+    if (countryCode === "CN") {
+      geoNote = "🟢 正常";
+      delayDiff = null;
+      cdnNoteRaw = "📡 CDN 三角测量: ✅ 已识别为大陆用户，无需测点判断";
+    } else {
+      flashUpdate("📡 正在进行 POP 最优入口检测…");
+      cdnNoteRaw = await withTimeout(runCDNTriangleMeasurement(ipapi.ip), 15000);
+      await sleep(500);
+    }
+
+    const ref = GEO_BASELINE?.[countryCode]?.[CONFIG.vpsRegion];
+    if (countryCode !== "CN") {
+      if (!ref) {
+        geoNote = `❓ 未识别（无 ${countryCode} → ${CONFIG.vpsRegion} 样本）`;
+      } else if (typeof pingRTT !== "number" || typeof wsRTT !== "number") {
+        geoNote = "❓ 未识别（链路测量失败）";
+      } else {
+        const { expectedRTT, tolerance } = ref;
+        const httpExceeds = pingRTT > expectedRTT + tolerance;
+        const wsExceeds = wsRTT > expectedRTT + tolerance;
+        geoNote = (httpExceeds || wsExceeds) ? "异常 ❌" : "正常 ✅";
+      }
+    }
+
+    const webrtcResult = compareAllIPs();
+    const spoofResult = calculateSpoofScore(
+      ipapi,
+      delayDiff,
+      osMismatch,
+      geoNote,
+      cdnNoteRaw?.includes("❌"),
+      webrtcResult.status.includes("🔴")
+    );
+
+    const items = [
+      ["是否标记为 TOR", ipapi?.is_tor ? "🔴 已标记" : "🟢 未标记", ipapi?.is_tor ? "#fb0000" : "#00ff22"],
+      ["是否标记为 VPN", ipapi?.is_vpn ? "🔴 已标记" : "🟢 未标记", ipapi?.is_vpn ? "#fb0000" : "#00ff22"],
+      ["是否标记为 代理", ipapi?.is_proxy ? "🔴 已标记" : "🟢 未标记", ipapi?.is_proxy ? "#fb0000" : "#00ff22"],
+      ["是否标记为 爬虫", ipapi?.is_crawler ? "🔴 已标记" : "🟢 未标记", ipapi?.is_crawler ? "#fb0000" : "#00ff22"],
+      ["是否标记为 滥用IP", ipapi?.is_abuser ? "🔴 已标记" : "🟢 未标记", ipapi?.is_abuser ? "#fb0000" : "#00ff22"],
+      ["是否标记为 数据中心", ipapi?.is_datacenter ? "🔴 已标记" : "🟢 未标记", ipapi?.is_datacenter ? "#fb0000" : "#00ff22"],
+      ["时区是否一致", spoofResult.tzMismatch ? "🔴 检测到异常" : "🟢 正常", spoofResult.tzMismatch ? "#fb0000" : "#00ff22"],
+      ["指纹真实性", osMismatch === true ? "🔴 检测到异常" : osMismatch === false ? "🟢 正常" : "❓ 未识别", osMismatch === true ? "#fb0000" : "#00ff22"],
+      ["链路延迟测量", delayDiff !== null && delayDiff > 90 ? "🔴 检测到异常" : "🟢 正常", delayDiff !== null && delayDiff > 90 ? "#fb0000" : "#00ff22"],
+      ["地理位置延迟检测", geoNote === "异常 ❌" ? "🔴 检测到异常" : geoNote.includes("❓") ? "❓ 未识别" : "🟢 正常", geoNote === "异常 ❌" ? "#fb0000" : geoNote.includes("❓") ? "#fffb00" : "#00ff22"],
+      ["POP 最优入口检测", cdnNoteRaw?.includes("❌") ? "🔴 检测到异常" : cdnNoteRaw ?? "❓ 未识别", cdnNoteRaw?.includes("❌") ? "#fb0000" : "#00ff22"],
+      ["WebRTC 是否泄露", webrtcResult.status, webrtcResult.color]
+    ];
+
+    showResultHTML(items, spoofResult.score);
   }
 
-  const webrtcResult = compareAllIPs();
-  const spoofResult = calculateSpoofScore(
-    ipapi,
-    delayDiff,
-    osMismatch,
-    geoNote,
-    cdnNoteRaw?.includes("❌"),
-    webrtcResult.status.includes("🔴")
-  );
+  async function runAnalysis() {
+    if (detectBtn.disabled) return;
+    detectBtn.disabled = true;
+    loader.style.display = "block";
+    await runAnalysisCore();
+    loader.style.display = "none";
+    detectBtn.disabled = false;
+  }
 
-  const items = [
-    ["是否标记为 TOR", ipapi?.is_tor ? "🔴 已标记" : "🟢 未标记", ipapi?.is_tor ? "#fb0000" : "#00ff22"],
-    ["是否标记为 VPN", ipapi?.is_vpn ? "🔴 已标记" : "🟢 未标记", ipapi?.is_vpn ? "#fb0000" : "#00ff22"],
-    ["是否标记为 代理", ipapi?.is_proxy ? "🔴 已标记" : "🟢 未标记", ipapi?.is_proxy ? "#fb0000" : "#00ff22"],
-    ["是否标记为 爬虫", ipapi?.is_crawler ? "🔴 已标记" : "🟢 未标记", ipapi?.is_crawler ? "#fb0000" : "#00ff22"],
-    ["是否标记为 滥用IP", ipapi?.is_abuser ? "🔴 已标记" : "🟢 未标记", ipapi?.is_abuser ? "#fb0000" : "#00ff22"],
-    ["是否标记为 数据中心", ipapi?.is_datacenter ? "🔴 已标记" : "🟢 未标记", ipapi?.is_datacenter ? "#fb0000" : "#00ff22"],
-    ["时区是否一致", spoofResult.tzMismatch ? "🔴 检测到异常" : "🟢 正常", spoofResult.tzMismatch ? "#fb0000" : "#00ff22"],
-    ["指纹真实性", osMismatch === true ? "🔴 检测到异常" : osMismatch === false ? "🟢 正常" : "❓ 未识别", osMismatch === true ? "#fb0000" : "#00ff22"],
-    ["链路延迟测量", delayDiff !== null && delayDiff > 90 ? "🔴 检测到异常" : "🟢 正常", delayDiff !== null && delayDiff > 90 ? "#fb0000" : "#00ff22"],
-    ["地理位置延迟检测", geoNote === "异常 ❌" ? "🔴 检测到异常" : geoNote.includes("❓") ? "❓ 未识别" : "🟢 正常", geoNote === "异常 ❌" ? "#fb0000" : geoNote.includes("❓") ? "#fffb00" : "#00ff22"],
-    ["POP 最优入口检测", cdnNoteRaw?.includes("❌") ? "🔴 检测到异常" : cdnNoteRaw ?? "❓ 未识别", cdnNoteRaw?.includes("❌") ? "#fb0000" : "#00ff22"],
-    ["WebRTC 是否泄露", webrtcResult.status, webrtcResult.color]
-  ];
-
-  showResultHTML(items, spoofResult.score);
+  detectBtn.addEventListener("click", runAnalysis);
 });
-
 </script>
-
 
 
 
