--- a/521.html
+++ b/521.html
@@ -375,64 +375,76 @@ async function fetchIPAPIData() {
     "https://uncloak1.huangjie.ggff.net",
     "https://uncloak2.huangjie.ggff.net",
     "https://uncloak3.huangjie.ggff.net",
-    "https://api.ipapi.is"
+    "https://api.ipapi.is",
+    "https://uncloak3.huangjie.ggff.net"	  
   ];
 
   for (const url of workerList) {
     try {
-      const controller = new AbortController();
-      const timeout = setTimeout(() => controller.abort(), 4000); // 4秒超时
+      const fetchWithTimeout = new Promise((resolve, reject) => {
+        const controller = new AbortController();
+        const timeout = setTimeout(() => {
+          controller.abort();
+          reject(new Error("Timeout"));
+        }, 4000);
 
-      const res = await fetch(url, {
-        cache: "no-store",
-        signal: controller.signal
+        fetch(url, { cache: "no-store", signal: controller.signal })
+          .then(res => res.json())
+          .then(raw => {
+            clearTimeout(timeout);
+            const ip = raw?.ip ?? raw?.query ?? null;
+            const location = raw.location ?? {};
+            if (!ip) return reject(new Error("No IP"));
+
+            const filtered = {
+              ip,
+              timezone: raw.timezone ?? location.timezone ?? "Unknown",
+              country_code: raw.country_code ?? location.country_code ?? "Unknown",
+              country_name: raw.country_name ?? location.country ?? "Unknown",
+              region_name: raw.region_name ?? location.state ?? "",
+              city: raw.city ?? location.city ?? "",
+              latitude: raw.latitude ?? location.latitude ?? null,
+              longitude: raw.longitude ?? location.longitude ?? null,
+              continent: raw.continent ?? location.continent ?? "",
+              zip: raw.zip ?? location.zip ?? "",
+              is_eu_member: raw.is_eu_member ?? location.is_eu_member ?? false,
+              calling_code: raw.calling_code ?? location.calling_code ?? "",
+              currency_code: raw.currency_code ?? location.currency_code ?? "",
+              local_time: raw.local_time ?? location.local_time ?? "",
+              local_time_unix: raw.local_time_unix ?? location.local_time_unix ?? null,
+              is_dst: raw.is_dst ?? location.is_dst ?? false,
+              asn: raw.asn?.asn ?? raw.asn ?? null,
+              org: raw.asn?.org ?? raw.org ?? "",
+              is_vpn: raw.is_vpn ?? false,
+              is_proxy: raw.is_proxy ?? false,
+              is_tor: raw.is_tor ?? false,
+              is_abuser: raw.is_abuser ?? false,
+              is_crawler: raw.is_crawler ?? false,
+              is_datacenter: raw.is_datacenter ?? false
+            };
+
+            IPStore.ipapiData = filtered;
+            IPStore.ipapi = filtered.ip;
+            resolve(filtered);
+          })
+          .catch(err => {
+            clearTimeout(timeout);
+            reject(err);
+          });
       });
 
-      clearTimeout(timeout);
-      const raw = await res.json();
-      const ip = raw?.ip ?? raw?.query ?? null;
-      const location = raw.location ?? {};
-
-      if (ip) {
-        const filtered = {
-          ip,
-          timezone: raw.timezone ?? location.timezone ?? "Unknown",
-          country_code: raw.country_code ?? location.country_code ?? "Unknown",
-          country_name: raw.country_name ?? location.country ?? "Unknown",
-          region_name: raw.region_name ?? location.state ?? "",
-          city: raw.city ?? location.city ?? "",
-          latitude: raw.latitude ?? location.latitude ?? null,
-          longitude: raw.longitude ?? location.longitude ?? null,
-          continent: raw.continent ?? location.continent ?? "",
-          zip: raw.zip ?? location.zip ?? "",
-          is_eu_member: raw.is_eu_member ?? location.is_eu_member ?? false,
-          calling_code: raw.calling_code ?? location.calling_code ?? "",
-          currency_code: raw.currency_code ?? location.currency_code ?? "",
-          local_time: raw.local_time ?? location.local_time ?? "",
-          local_time_unix: raw.local_time_unix ?? location.local_time_unix ?? null,
-          is_dst: raw.is_dst ?? location.is_dst ?? false,
-          asn: raw.asn?.asn ?? raw.asn ?? null,
-          org: raw.asn?.org ?? raw.org ?? "",
-          is_vpn: raw.is_vpn ?? false,
-          is_proxy: raw.is_proxy ?? false,
-          is_tor: raw.is_tor ?? false,
-          is_abuser: raw.is_abuser ?? false,
-          is_crawler: raw.is_crawler ?? false,
-          is_datacenter: raw.is_datacenter ?? false
-        };
-        IPStore.ipapiData = filtered;
-        IPStore.ipapi = filtered.ip;
-        return filtered;
-      }
+      const result = await fetchWithTimeout;
+      if (result?.ip) return result;
     } catch (e) {
       // 可选调试输出：console.warn(`接口 ${url} 请求失败`, e);
     }
 
-    await sleep(300); // 防止连续请求过快
+    await sleep(300);
   }
 
   return null;
 }
+
 
 
   // 第三段JS
